@@ -1,6 +1,8 @@
 2.1.2
 =====
 - Fixed pipe character (|) causing expression parsing exceptions when used inside text literals.
+- Fixed required dependency on OGNL in Spring environments being re-introduced in 2.1 due to
+  reference to OgnlVariableExpressionEvaluator in StandardDialect's initialization.
 
 
 2.1.1
